--- a/package.json
+++ b/package.json
@@ -1,26 +1,33 @@
 {
-  "name": "front-cloud-camp",
+  "name": "base-template-react-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^13.0.0",
-    "@testing-library/user-event": "^13.2.1",
-    "@types/jest": "^27.0.1",
+    "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "axios": "^1.4.0",
+    "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.0",
+    "react-router": "^6.13.0",
+    "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
-    "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0"
+    "sass": "^1.63.4",
+    "typescript": "^4.4.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "GENERATE_SOURCEMAP=false craco start",
+    "build": "craco build",
+    "clean": "rm -rf ./node_modules ./yarn-lock.json ./yarn.lock ./package-lock.json",
+    "lint:fix": "yarn run lint --fix",
+    "prettier": "prettier src --check",
+    "prettier:fix": "yarn run prettier --write",
+    "format": "yarn run prettier:fix && yarn run lint:fix",
+    "reinstall": "yarn run clean && yarn run uncache && yarn install",
+    "uncache": "yarn cache clean"
   },
   "eslintConfig": {
     "extends": [
@@ -39,5 +46,19 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "craco": "^0.0.3",
+    "craco-alias": "^3.0.1",
+    "craco-sass-resources-loader": "^1.1.0",
+    "eslint": "^8.43.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "lint": "^0.8.19",
+    "lint-fix": "^0.24.0",
+    "prettier": "^2.8.8"
   }
 }
